RESOLVED FIXED53408
Fixed crash on window close (maybe crash on launch?) due to missing frame null checks
https://bugs.webkit.org/show_bug.cgi?id=53408
Summary Fixed crash on window close (maybe crash on launch?) due to missing frame nul...
Geoffrey Garen
Reported 2011-01-30 19:23:38 PST
Fixed crash on launch / crash on window close due to missing frame null checks
Attachments
Patch (2.79 KB, patch)
2011-01-30 19:24 PST, Geoffrey Garen
no flags
Patch (3.15 KB, patch)
2011-01-30 20:03 PST, Geoffrey Garen
sam: review+
Geoffrey Garen
Comment 1 2011-01-30 19:24:35 PST
Maciej Stachowiak
Comment 2 2011-01-30 19:34:12 PST
Comment on attachment 80612 [details] Patch r=me
Geoffrey Garen
Comment 3 2011-01-30 19:36:14 PST
Geoffrey Garen
Comment 4 2011-01-30 19:37:38 PST
Maciej mentioned on IRC that it was surprising that the process ever got into this state. It happened on a system that was crawling due to massive paging, possibly after a web process crash. I speculate that it was a race condition related to exiting / crashing.
Geoffrey Garen
Comment 5 2011-01-30 20:01:34 PST
Sam said on IRC that this should be an ASSERT and not a null check, since we should not get into this state.
Geoffrey Garen
Comment 6 2011-01-30 20:03:54 PST
Geoffrey Garen
Comment 7 2011-01-30 20:06:50 PST
Note You need to log in before you can comment on or make changes to this bug.