2011-01-30  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Maciej Stachowiak.

        Fixed crash on window close (maybe crash on launch?) due to missing
        frame null checks
        https://bugs.webkit.org/show_bug.cgi?id=53408

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::didNavigateWithNavigationData):
        (WebKit::WebContext::didPerformClientRedirect):
        (WebKit::WebContext::didPerformServerRedirect):
        (WebKit::WebContext::didUpdateHistoryTitle): Check for NULL, since we're
        calling a function that can return it.


git-svn-id: svn://svn.chromium.org/blink/trunk@77102 bbb929c8-8fbe-4397-9dbb-9b2b20218538